--- a/code/app/src/main/res/layout/activity_personal_profile_details.xml
+++ b/code/app/src/main/res/layout/activity_personal_profile_details.xml
@@ -1,31 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/black_background"
+    android:background="@color/black_background"
     tools:context=".view.PersonalProfileDetailsActivity">
 
-
+    <!-- Material Toolbar with a back button -->
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/button_PersonalProfileDetailsActivity_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="@color/black"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginTop="25dp"
+        android:background="@color/black_background"
+        app:navigationIcon="@drawable/ic_white_back_button"
+        app:title="Profile"
+        app:titleTextColor="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_white_back_button" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <TextView
-        android:id="@+id/textView_PersonalProfileDetailsActivity"
-        android:layout_width="wrap_content"
+    <!-- Material Card to encapsulate the user details -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_user_details"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Profile page "
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="4dp"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/button_PersonalProfileDetailsActivity_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- Container for user details -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <!-- Title for user details -->
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView_userDetailsTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User Details"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+
+            <!-- TextView to display the username -->
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/textView_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Username: "
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_marginTop="8dp" />
+
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
