--- a/code/app/src/main/res/values/styles_material3.xml
+++ b/code/app/src/main/res/values/styles_material3.xml
@@ -22,6 +22,12 @@
         <item name="trackColorInactive">@color/black</item>
     </style>
 
+    <style name="ToolbarTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
 
 </resources>
