--- a/code/app/src/main/res/layout/fragment_trigger_words.xml
+++ b/code/app/src/main/res/layout/fragment_trigger_words.xml
@@ -55,6 +55,7 @@
             android:id="@+id/button_TriggerWordsFrag_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/primary_blue"
             android:text="Add"
             android:layout_marginStart="8dp" />
 
