--- a/code/app/src/main/res/layout/activity_add_mood_event.xml
+++ b/code/app/src/main/res/layout/activity_add_mood_event.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="87dp"
         android:background="@color/black_background"
-        android:contentDescription="Back_button"
+        android:contentDescription="@string/back_button_add_mood"
         android:src="@drawable/ic_white_back_button"
         android:translationY="15dp"
         app:layout_constraintEnd_toStartOf="@+id/textview_ActivityAddMoodEvent_title"
@@ -73,7 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
-        android:text="Mood"
+        android:text="@string/mood_add_mood"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -98,7 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Trigger"
+        android:text="@string/trigger_add_mood"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editText_ActivityAddMoodEvent_triggerInput"
@@ -115,7 +115,7 @@
         android:background="@color/text_box_background"
         android:backgroundTint="#282727"
         android:backgroundTintMode="src_over"
-        android:hint="Trigger"
+        android:hint="@string/trigger_add_mood_edittext"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -127,7 +127,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Social Situation"
+        android:text="@string/social_situation_add_mood"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/spinner_ActivityAddMoodEvent_socialsituation"
@@ -154,7 +154,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="Geolocation (Optional)"
+        android:text="@string/geolocation_optional_add_mood"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_ActivityAddMoodEvent_socialsituation" />
@@ -165,7 +165,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="15dp"
-        android:text="Public Mood Entry"
+        android:text="@string/public_mood_entry_add_mood"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/button_ActivityAddMoodEvent_save"
         app:layout_constraintEnd_toEndOf="parent"
