--- a/code/app/src/main/res/layout/activity_view_comments.xml
+++ b/code/app/src/main/res/layout/activity_view_comments.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:background="@color/black_background"
-        android:contentDescription="Select image for mood event"
+        android:contentDescription="@string/select_image_for_mood_event_comments"
         android:src="@drawable/ic_white_back_button"
         app:layout_constraintBottom_toBottomOf="@+id/textview_ActivityViewComments_title"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginEnd="16dp"
         android:adjustViewBounds="true"
         android:background="@android:color/transparent"
-        android:contentDescription="Select image for mood event"
+        android:contentDescription="@string/select_image_for_mood_event_comments_imagebutton"
         android:maxWidth="60dp"
         android:maxHeight="60dp"
         android:scaleType="fitXY"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:fontFamily="monospace"
-        android:text="Comments"
+        android:text="@string/comments_comments"
         app:fontFamily="sans-serif-black"
         android:textColor="@color/white"
         android:textSize="24sp"
