--- a/code/app/src/main/res/layout/activity_community_map.xml
+++ b/code/app/src/main/res/layout/activity_community_map.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
-        android:contentDescription="Back"
+        android:contentDescription="@string/back_community"
         android:src="@drawable/ic_white_back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +28,7 @@
         android:layout_marginStart="59dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:text="Community Map"
+        android:text="@string/community_map_community_map"
         android:textColor="@android:color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
