--- a/code/app/src/main/res/layout/activity_edit_delete_mood.xml
+++ b/code/app/src/main/res/layout/activity_edit_delete_mood.xml
@@ -13,7 +13,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="15dp"
-        android:text="Public Mood Entry"
+        android:text="@string/public_mood_entry_edit_delete_mood"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/button_DeleteEditMoodActivity_save"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginEnd="87dp"
         android:backgroundTint="@color/black_background"
         android:icon="@drawable/ic_white_back_button"
-        android:contentDescription="Back button"
+        android:contentDescription="@string/back_button_edit_delete_mood"
         android:translationY="15dp"
         app:iconTint="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/textView_DeleteEditMoodActivity_title"
@@ -49,7 +49,7 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="15dp"
         android:adjustViewBounds="true"
-        android:contentDescription="delete_button"
+        android:contentDescription="@string/delete_button_edit_delete_mood"
         android:maxWidth="100dp"
         android:maxHeight="100dp"
         android:scaleType="fitXY"
@@ -67,7 +67,7 @@
         android:layout_marginStart="132dp"
         android:layout_marginTop="16dp"
         android:fontFamily="monospace"
-        android:text="Mood Event"
+        android:text="@string/mood_event_edit_delete_mood"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
-        android:text="Select Image (Optional)"
+        android:text="@string/select_image_optional_edit_delete_mood"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:text="Trigger"
+        android:text="@string/trigger_edit_delete_mood"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/editText_DeleteEditMoodActivity_triggerInput"
@@ -124,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="4dp"
-        android:text="Mood"
+        android:text="@string/mood_edit_delete_mood"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
         android:background="@color/text_box_background"
         android:backgroundTint="#282727"
         android:backgroundTintMode="src_over"
-        android:hint="Trigger"
+        android:hint="@string/trigger_edit_delete_mood_edit_text"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Social Situation"
+        android:text="@string/social_situation_edit_delete_mood"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
@@ -194,7 +194,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="Geolocation (Optional)"
+        android:text="@string/geolocation_optional_edit_delete_mood"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
@@ -206,7 +206,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/primary_blue"
-        android:text="Save"
+        android:text="@string/save_edit_delete_mood"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/switch_DeleteEditMoodActivity_geoSwitch" />
