--- a/code/app/src/main/res/layout/activity_user_followed.xml
+++ b/code/app/src/main/res/layout/activity_user_followed.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/black_background"
-        android:contentDescription="Select image for mood event"
+        android:contentDescription="@string/select_image_for_mood_event_followed"
         android:src="@drawable/ic_white_back_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Username"
+        android:text="@string/username_followed"
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
