--- a/code/app/src/main/res/layout/activity_edit_delete_mood.xml
+++ b/code/app/src/main/res/layout/activity_edit_delete_mood.xml
@@ -24,22 +24,16 @@
         app:layout_constraintTop_toBottomOf="@+id/spinner_DeleteEditMoodActivity_socialsituation"
         app:layout_constraintVertical_bias="0.0" />
 
-
-
-
-    <!-- Material Icon Button for Back -->
-    <com.google.android.material.button.MaterialButton
+    <ImageButton
         android:id="@+id/imageButton_DeleteEditMoodActivity_back"
-        style="@style/Widget.Material3.Button.Icon"
         android:layout_width="48dp"
         android:layout_height="52dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="87dp"
-        android:backgroundTint="@color/black_background"
-        android:icon="@drawable/ic_white_back_button"
+        android:background="@null"
+        android:src="@drawable/ic_white_back_button"
         android:contentDescription="Back button"
         android:translationY="15dp"
-        app:iconTint="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/textView_DeleteEditMoodActivity_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
